--- a/LectorQRv2/LectorQRv2.csproj
+++ b/LectorQRv2/LectorQRv2.csproj
@@ -60,10 +60,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO\Repository.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Models\Placa.cs" />
+    <Compile Include="Views\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Views\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="MATLAB\Execute.cs" />
@@ -74,7 +75,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Views\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
