Se agregan comentarios.

--- a/LectorQRv2/app.config
+++ b/LectorQRv2/app.config
@@ -6,5 +6,7 @@
         <add name="LectorQRv2.Properties.Settings.ParqueoConnectionString"
             connectionString="Data Source=DESKTOP-GKO6TEQ\MARDAN;Initial Catalog=Parqueo;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="LectorQRv2.Properties.Settings.NormanConnection" connectionString="Data Source=NULLPTR\SQLEXPRESS;Initial Catalog=Parqueo;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
